# beyond_stars

./: .gitignore  README.md  app.py  create_app.py  extensions.py  pyproject.toml  requirements.txt
controllers/: user_controllers.py
forms/: user_forms.py
migrations/versions/: 5fb9eaf9bce2_add_profile_information_to_user_model.py  927fddf98427_add_user_model.py  dee31c02f462_.py
models/: user.py
routes/: auth.py  init_blueprints.py  landing.py  private.py  public.py
schemas/: user_schemas.py
static/css/: auth.css  checkout.css  home.css  landing.css  login.css  main.css  overview.css  product-card.css  register.css  search-bar.css
templates/: landing.html  layout.html
templates/auth/: login.html  register.html
templates/private/: home.html  profile.html
templates/public/: checkout.html  overview.html
